--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A online day planner with many features">
+    <meta name="keywords" content="to-do list, day planner, time manager, activity manager, scheduler">
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header></header>
+    <section id="main-outer"></section>
+    <footer></footer>
     
     <script src="/assets/js/script.js"></script>
 </body>
