Add html elements to header section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1 id="logo">“If You Fail to Plan, You Are Planning to Fail” <br /> - Benjamin Franklin</h1>
+        <div id="theme-selector">
+            <button onclick="themeChanger()" id="toggle">Dark Mode</button>
+        </div>
+    </header>
     <section id="main-outer"></section>
     <footer></footer>
     
