--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A online day planner with many features">
     <meta name="keywords" content="to-do list, day planner, time manager, activity manager, scheduler">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Document</title>
+    <title>Plan Your Tasks</title>
 </head>
 <body>
     <header>
@@ -16,7 +16,28 @@
             <button onclick="themeChanger()" id="toggle">Dark Mode</button>
         </div>
     </header>
-    <section id="main-outer"></section>
+    <section id="main-outer">
+        <div id="main-header">
+            <h2 id="welcome">Welcome to your Task Planner!!!</h2>
+            <button id="start">Click to start adding tasks</button>
+
+            <div id="task-actions">
+                <button id="add-task" type="button">Add Tasks</button>
+                <button id="reset-table" onclick="resetTable()">Reset Table</button>
+            </div>
+
+            <div id="overlay"></div>
+
+            <div id="submit-task">
+                <div id="submit-task-header">
+                    <button id="close-task-entry" class="close">&times;</button>
+                    <h3>Your First Task</h3>
+                </div>
+                <textarea name="task-entry-box" id="task-entry-box" cols="30" rows="10" maxlength="150" required placeholder="Enter your task here (150 characters max)"></textarea>
+                <button id="submit-task-button" onclick="firstTask()" type="button">Submit</button>
+            </div>
+        </div>
+    </section>
     <footer></footer>
     
     <script src="/assets/js/script.js"></script>
