Add new task div to main section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                 <textarea name="task-entry-box" id="task-entry-box" cols="30" rows="10" maxlength="150" required placeholder="Enter your task here (150 characters max)"></textarea>
                 <button id="submit-task-button" onclick="firstTask()" type="button">Submit</button>
             </div>
+            <div id="submit-new-task">
+                <div id="submit-new-task-header">
+                    <button id="new-task-close" class="close">&times;</button>
+                    <h3>New Task</h3>
+                </div>
+                <textarea name="new-task-box" id="new-task-box" cols="30" rows="10" maxlength="150" required placeholder="Enter your task here (150 characters max)" ></textarea>
+                <button id="submit-new-task-button" onclick="newTask()" type="button">Submit</button>
+            </div>
         </div>
     </section>
     <footer></footer>
