--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                 <textarea name="new-task-box" id="new-task-box" cols="30" rows="10" maxlength="150" required placeholder="Enter your task here (150 characters max)" ></textarea>
                 <button id="submit-new-task-button" onclick="newTask()" type="button">Submit</button>
             </div>
+            <div id="task-actions-popup">
+                <div id="actions-header">
+                    <button id="close-actions" class="close">&times;</button>
+                    <h3>Edit Your task</h3>
+                </div>
+                <h4 id="selected-task">Selected Task No - <span id="selected-task-no"></span></h4>
+                <button id="highlight-task" onclick="highlightTask()" type="button">Highlight</button>
+                <button id="mark-done" onclick="markDone()" type="button">Mark as Done</button>
+                <button id="delete" onclick="deleteTask()" type="button">Delete</button>
+            </div>
         </div>
     </section>
     <footer></footer>
