Add content to footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <button id="delete" onclick="deleteTask()" type="button">Delete</button>
             </div>            
         </div>
-        
+
         <table id="task-table">
             <thead>
                 <tr>
@@ -70,7 +70,9 @@
 
         <h2 id="task-count">You currently have no tasks</h2>
     </section>
-    <footer></footer>
+    <footer>
+        <h3>Copyright &copy 2023 Plan Your Task Inc. All rights reserved</h3>
+    </footer>
     
     <script src="/assets/js/script.js"></script>
 </body>
