Done changes in the text content of footer element

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 id="logo">“If You Fail to Plan, You Are Planning to Fail” <br /> - Benjamin Franklin</h1>
+        <h1 id="logo">“If You Fail to Plan, You Are Planning to Fail” <br> - Benjamin Franklin</h1>
         <div id="theme-selector">
             <button onclick="themeChanger()" id="toggle">Dark Mode</button>
         </div>
@@ -72,7 +72,7 @@
     </section>
     
     <footer>
-        <h3>Copyright &copy 2023 Plan Your Task Inc. All rights reserved</h3>
+        <h3>Copyright &copy; 2023 Plan Your Task Inc. All rights reserved</h3>
     </footer>
     
     <script src="/assets/js/script.js"></script>
