--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A online day planner with many features">
     <meta name="keywords" content="to-do list, day planner, time manager, activity manager, scheduler">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Plan Your Tasks</title>
 </head>
 <body>
