update link to js file

--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
         <h3>Copyright &copy; 2023 Plan Your Task Inc. All rights reserved</h3>
     </footer>
     
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
